--- a/Lab3_20200839/src/main/resources/templates/index.html
+++ b/Lab3_20200839/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 <main>
     <div class="container px-4 py-5">
-        <h1 class="pb-2 border-bottom">Clinica</h1>
+        <h1 class="pb-2 border-bottom">Clínica</h1>
         <button th:href="@{/doctor}">Doctores</button>
         <button th:href="@{/hospital}">Hospital</button>
         <button th:href="@{/paciente}">Paciente</button>
