--- a/Lab3_20200839/src/main/resources/templates/paciente/list.html
+++ b/Lab3_20200839/src/main/resources/templates/paciente/list.html
@@ -29,24 +29,34 @@
     </nav>
   </header>
   <div class="container px-4 py-5">
-    <h1 class="pb-2 border-bottom">Lista hospitales</h1>
+    <h1 class="pb-2 border-bottom">Lista pacientes</h1>
     <table class="table table-sm">
       <tr>
         <th>#</th>
         <th>Nombre</th>
-        <th>Direccion</th>
-        <th>Teléfono</th>
+        <th>Edad</th>
+        <th>Genero</th>
+        <th>Diagnostico</th>
+        <th>Fecha de la cita</th>
+        <th>Numero de habitacion</th>
+        <th>ID Doctor</th>
+        <th>Hospital ID</th>
         <th></th>
         <th></th>
       </tr>
-      <tr th:each="hospital, info : ${listHospital}">
+      <tr th:each="paciente, info : ${listPaciente}">
         <td th:text="${info.index + 1}"></td>
-        <td th:text="${hospital.hospitalNombre}"></td>
-        <td th:text="${hospital.hospitalDireccion}"></td>
-        <td th:text="${hospital.hospitalTelefono}"></td>
-        <td><a class="btn btn-primary">Mostrar doctores</a>
+        <td th:text="${paciente.nombrePaciente}"></td>
+        <td th:text="${paciente.edadPaceinte}"></td>
+        <td th:text="${paciente.generoPaciente}"></td>
+        <td th:text="${paciente.diagnosticoPaciente}"></td>
+        <td th:text="${paciente.fechaCita}"></td>
+        <td th:text="${paciente.habitacionPaciente}"></td>
+        <td th:text="${paciente.doctorPaciente}"></td>
+        <td th:text="${paciente.hospitalPaciente}"></td>
+        <td><a class="btn btn-primary">editar</a>
         </td>
-        <td><a class="btn btn-success" >Mostrar pacientes</a>
+        <td><a class="btn btn-success" >Derivar pacientes</a>
         </td>
       </tr>
     </table>
